# chess_training_platform

./: README.md
services/chess-engine/: CMakeLists.txt  README.md
services/chess-engine/src/attacks/: attacks.cpp  attacks.hpp
services/chess-engine/src/evaluation/: eval.cpp  eval.hpp
services/chess-engine/src/position/: bb_position.cpp  bb_position.hpp  bitboard.cpp  bitboard.hpp  board_factory.hpp
services/chess-engine/src/rules/: rules.cpp
services/chess-engine/src/scripts/: benchmark_main.cpp
services/chess-engine/src/search/: search.cpp  search_bb.cpp  search_bb.hpp
services/chess-engine/tests/: test_helpers.hpp  test_main.cpp  test_movegen.cpp  test_position.cpp  test_rules.cpp  test_sequences.cpp
